@@ -4,6 +4,7 @@ BUGS FIXED:
 
 MINOR:
   * soundgen(): new argument "formantLocking" for temporarily locking a harmonic to a formant (a form of source-filter interaction)
+  * soundgen(): formant drift occurs regardless of whether formants are specified as moving or static
 
 
           CHANGES IN SOUNDGEN VERSION 1.6.1 [22-January-2020]
